add kaia dataset in config.ini

--- a/config.ini
+++ b/config.ini
@@ -37,10 +37,10 @@ keynet=thirdparty/keynet
 ; select your dataset (decomment only one of the following lines!) 
 ;type=KITTI_DATASET
 ;type=TUM_DATASET
-type=VIDEO_DATASET
+;type=VIDEO_DATASET
+type=ROS_DATASET
 ;type=FOLDER_DATASET
 ;type=LIVE_DATASET
-
 
 [KITTI_DATASET]
 type=kitti 
@@ -83,6 +83,12 @@ name=video_color.mp4
 ;name=video.mp4
 ;
 groundtruth_file=groundtruth.txt
+
+[ROS_DATASET]
+type=rosbag
+base_path=/home/dino/Datasets/Kaia
+cam_settings=settings/Kaia.yaml
+name=trondheim3_inn.bag
 
 
 [FOLDER_DATASET]
